--- a/site/pages/v4/index-en.hbs
+++ b/site/pages/v4/index-en.hbs
@@ -1,12 +1,12 @@
 ---
 {
-	"title": "Web Experience Toolkit (WET) - Style guide",
+	"title": "Style guide",
 	"language": "en",
 	"altLangPrefix": "index",
+	"css": "http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome",
 	"dateModified": "2014-02-28"
 }
 ---
-<h1>Style guide</h1>
 <div class="row">
 	<div class="col-md-8">
 		<p>The style guide is broken down two ways - by category and by user role - both ultimately taking you to the same information.</p>
