Updated content on various pages
Includes addition on new Bootstrap styles that were recently released
(bg-success etc)

--- a/site/pages/v4/design/code-en.hbs
+++ b/site/pages/v4/design/code-en.hbs
@@ -8,65 +8,85 @@
 }
 ---
 <div class="wb-prettify all-pre">
-	<div class="row">
-		<div class="col-md-8">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h2 class="panel-title">Table of contents</h2>
-				</div>
-				<div class="panel-body">
-					<ul>
-						<li><a href="#description">Description</a></li>
-						<li><a href="#options">Code options </a></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="panel panel-info">
-				<div class="panel-heading">
-					<h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
-				</div>
-				<div class="list-group"><a href="http://wet-boew.github.io/v4.0-ci/demos/prettify/prettify-en.html" class="list-group-item">Prettify code <span class="wb-inv">- Design guide </span></a></div>
-			</div>
-		</div>
-	</div>
-	<h2 id="description">Description</h2>
-	<p>For quoting blocks of content from another source within your document.</p>
-	<h2 id="options">Code options</h2>
-	<h3>Inline</h3>
-	<p>Wrap inline snippets of code with <code>&lt;code&gt;</code>.</p>
-	For example, <code>&lt;section&gt;</code> should be wrapped as inline.
-	<div class="mrgn-tp-lg">
-		<pre><code>For example, &lt;code&gt;&amp;lt;section&amp;gt;&lt;/code&gt; should be wrapped as inline.
+  <div class="row">
+    <div class="col-md-8">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h2 class="panel-title">Table of contents</h2>
+        </div>
+        <div class="panel-body">
+          <ul>
+            <li><a href="#description">Description</a></li>
+            <li><a href="#inline">Inline code </a></li>
+            <li><a href="#keyboard">Keyboard keys </a></li>
+            <li><a href="#block">Code block </a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h2 class="panel-title"><span class="fa fa-picture-o text-muted"></span> Design guide </h2>
+        </div>
+        <div class="list-group"><a href="http://wet-boew.github.io/v4.0-ci/demos/prettify/prettify-en.html" class="list-group-item">Prettify code <span class="wb-inv">- Design guide </span></a></div>
+      </div>
+    </div>
+  </div>
+  <h2 id="description">Description</h2>
+  <p>For quoting blocks of content from another source within your document.</p>
+  <h2 id="inline">Inline code</h2>
+  <div class="well">
+    <p>Wrap inline snippets of code with <code>&lt;code&gt;</code>.</p>
+  </div>
+  For example, <code>&lt;section&gt;</code> should be wrapped as inline.
+  <div class="mrgn-tp-lg">
+    <pre><code>For example, &lt;code&gt;&amp;lt;section&amp;gt;&lt;/code&gt; should be wrapped as inline.
 </code></pre>
-	</div>
-	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-		<div class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-			<p>(Info goes here)</p>
-		</div>
-		<div class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-			<p>(Info goes here)</p>
-		</div>
-	</div>
-	<h3>Basic block</h3>
-	<p>Use <code>&lt;pre&gt;</code> for multiple lines of code. Be sure to escape any angle brackets in the code for proper rendering.</p>
-	<pre>&lt;p&gt;Sample text here...&lt;/p&gt;</pre>
-	<div class="mrgn-tp-lg">
-		<pre><code>&lt;pre&gt;&amp;lt;p&amp;gt;Sample text here...&amp;lt;/p&amp;gt;&lt;/pre&gt;</code></pre>
-	</div>
-	<p>You may optionally add the <code>.pre-scrollable</code> class, which will set a max-height of 350px and provide a y-axis scrollbar.</p>
-	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-		<div class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-			<p>(Info goes here)</p>
-		</div>
-		<div class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-			<p>(Info goes here)</p>
-		</div>
-	</div>
-	<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
+  </div>
+  <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+    <div class="col-md-6">
+      <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+      <p>(Info goes here)</p>
+    </div>
+    <div class="col-md-6 brdr-lft">
+      <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+      <p>(Info goes here)</p>
+    </div>
+  </div>
+  <h2 id="keyboard">Keyboard keys</h2>
+  <p>Use the <code>&lt;kbd&gt;</code> to indicate input that is typically entered via keyboard.</p>
+  <div class="well">
+    <p>To switch directories, type <kbd>cd</kbd> followed by the name of the directory.</p>
+  </div>
+  <pre><code>  To switch directories, type &lt;kbd&gt;cd&lt;/kbd&gt; followed by the name of the directory.
+</code></pre>
+  <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+    <div class="col-md-6">
+      <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+      <p>(Info goes here)</p>
+    </div>
+    <div class="col-md-6 brdr-lft">
+      <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+      <p>(Info goes here)</p>
+    </div>
+  </div>
+  <h2 class="block">Code block</h2>
+  <p>Use <code>&lt;pre&gt;</code> for multiple lines of code. Be sure to escape any angle brackets in the code for proper rendering.</p>
+  <pre>&lt;p&gt;Sample text here...&lt;/p&gt;</pre>
+  <div class="mrgn-tp-lg">
+    <pre><code>&lt;pre&gt;&amp;lt;p&amp;gt;Sample text here...&amp;lt;/p&amp;gt;&lt;/pre&gt;</code></pre>
+  </div>
+  <p>You may optionally add the <code>.pre-scrollable</code> class, which will set a max-height of 350px and provide a y-axis scrollbar.</p>
+  <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+    <div class="col-md-6">
+      <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+      <p>(Info goes here)</p>
+    </div>
+    <div class="col-md-6 brdr-lft">
+      <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+      <p>(Info goes here)</p>
+    </div>
+  </div>
+  <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
 </div>
